# rocksdb-android

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
bz2/: CMakeLists.txt  build.gradle.kts  downloadBz2.sh
gradle/wrapper/: gradle-wrapper.properties
lz4/: CMakeLists.txt  build.gradle.kts  downloadLz4.sh
snappy/: CMakeLists.txt  build.gradle.kts  downloadSnappy.sh
zstd/: build.gradle.kts  downloadZstd.sh
